--- a/src/styles/NextMatch.css
+++ b/src/styles/NextMatch.css
@@ -1,5 +1,6 @@
 .card {
     display: flex;
+    width: fit-content;
     gap: 10px;
     padding: 10px;
     background-color: white;
@@ -41,4 +42,38 @@
 .team-shield {
     order: -1;
     width: 25px;
+}
+
+.vr-100 {
+    width: 1px;
+    align-self: stretch;
+    margin: 0 4px;
+    background-color: var(--gray);
+}
+
+.card__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.card__info-date :nth-child(1) {
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.card__info-date :nth-child(2) {
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.card-button {
+    text-transform: uppercase;
+    color: var(--red);
+    font-weight: 900;
+    font-size: 12px;
+    padding: 10px;
+    border: 1px solid;
+    background-color: var(--white);
 }
