--- a/src/styles/NextMatch.css
+++ b/src/styles/NextMatch.css
@@ -39,6 +39,20 @@
     width: 250px;
 }
 
+.card__body-team__local--america, .card__body-team__visit--america {
+    display: flex;
+    align-items: center;
+    gap: 9px;
+    padding: 2px 0;
+    width: 250px;
+    font-weight: 900;
+}
+
+.card__body-team__local--america .team-shield, .card__body-team__visit--america .team-shield {
+    order: -1;
+    width: 30px;
+}
+
 .team-shield {
     order: -1;
     width: 25px;
