--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,8 +1,15 @@
 .gallery--container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 4px;
+    max-width: 1440px;
+    padding: 0 20px;
+    margin-bottom: 20px;
 }
 
 .gallery--img {
-    max-width: 350px;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
