--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,15 @@
 * {
     font-family: 'Inter', sans-serif;
     text-transform: uppercase;
+        /* colors */
+        --black: #1e1e1e;
+        --black-10: rgba(0,0,0, 0.1);
+        --red: #d91c22;
+        --white: #FFFFFF;
+        --white-20: rgba(255, 255, 255, 0.20);
+        --gray: #999999;
 }
 
-:root {
-
-    /* colors */
-    --black: #1e1e1e;
-    --red: #d91c22;
-    --white: #FFFFFF;
-    --white-20: rgba(255, 255, 255, 0.20);
-    --gray: #999999;
-    
-}
 
 html {
     margin: 0 auto;
@@ -92,4 +89,22 @@ a {
     display: flex;
     flex-wrap: wrap;
     gap: 4px;
+}
+
+@media (max-width : 900px) {
+    .container-grid{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 20px;
+        grid-template-columns: 1.6fr 1fr;
+        gap: 5px;
+    }
+
+    .elementor-grid-item {
+        display: flex;
+        padding: 10px;
+        gap: 10px;
+        align-items: center;
+        border: 1px solid var(--black-10);
+    }
 }
